--- a/Day 6 /package.json
+++ b/Day 6 /package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.6",
+    "nodemon": "^3.1.11"
   }
 }
